# llm-medical-guard

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: SHOW_HN_DRAFT.md  demo.cast
examples/: multilingual.py  quickstart.py
scripts/: demo_commands.sh  record_demo.sh
src/llm_medical_guard/: __init__.py  badge.py  cli.py  config.py  guard.py  pytest_plugin.py  result.py  stream.py
src/llm_medical_guard/checks/: __init__.py  banned_expressions.py  brand_mention.py  claim_severity.py  context_awareness.py  disclaimer.py  dosage.py  drug_interaction.py  source_attribution.py
src/llm_medical_guard/i18n/: de.yaml  en.yaml  es.yaml  fr.yaml  ja.yaml  ko.yaml  pt.yaml  zh.yaml
src/llm_medical_guard/integrations/: langchain.py  openai_wrapper.py
tests/: conftest.py  test_badge.py  test_banned_expressions.py  test_brand_mention.py  test_cli.py  test_config.py  test_context_awareness.py  test_disclaimer.py  test_dosage.py  test_drug_interaction.py  test_guard.py  test_i18n.py  test_pytest_plugin.py  test_source_attribution.py  test_stream.py
